tests/sources/invalid/match/match_non_exhaustive.fire
// Invalid: match does not cover every enum variant and has no wildcard.
// EXPECT: semantic error

enum Shape {
    Circle(radius: float64),
    Rectangle(width: float64, height: float64),
    Point
}

s: Shape = Shape.Circle(3.0);
match s {  //~ ERROR FS-SEM-0001 @1
    Shape.Circle(radius) -> { }
}
